--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "addPath": "",
-  "cameraPara": "Data/camera_para.dat",
+  "cameraPara": "test61/Data/camera_para.dat",
   "container": {
     "create": true,
     "containerName": "",
