--- a/config.json
+++ b/config.json
@@ -28,5 +28,11 @@
   },
   "stats": {
     "createHtml": true
+  },
+  "renderer": {
+    "type": "three",
+    "alpha": true,
+    "antialias": true,
+    "precision": "mediump"
   }
 }
